# CacheSimulatorCLI

./: .gitignore  CMakeLists.txt  CacheSim.cpp  README.md
examples/: addresses.txt  cache_simulator  homework_addresses.txt  hw1.txt  hw2.txt  hw3.txt
include/: CLI11.hpp  address_parser.hpp  cache.hpp  cache_entry.hpp  cache_set.hpp  policies.hpp  stats.hpp  test_cases.hpp  visualization.hpp
scripts/: package.sh
src/: address_parser.cpp  cache.cpp  cache_set.cpp  main.cpp  visualization.cpp
test/: homework_test_cases.cpp  test_cases.md
test/configs/: hw1_config.txt
